--- a/Ex1_4_Ex1_5.ipynb
+++ b/Ex1_4_Ex1_5.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNYcZn3dbWh9ohzHg1lzaY6",
+      "authorship_tag": "ABX9TyOzKjMYDb7XRLEqXfmtsAs7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,17 +37,7 @@
         "import scipy as sp\n",
         "import numpy as np\n",
         "import pandas as pd\n",
-        "from IPython.display import display\n",
-        "from IPython.display import clear_output\n",
-        "import tensorflow as tf\n",
-        "import tensorflow_probability as tfp\n",
-        "import itertools\n",
-        "import seaborn as sns\n",
-        "import scipy.stats as st\n",
-        "from scipy.optimize import fsolve, root_scalar\n",
-        "from scipy.special import expit\n",
-        "from itertools import product\n",
-        "import matplotlib as mpl\n"
+        "import matplotlib as mpl"
       ],
       "execution_count": 91,
       "outputs": []
